# patentpack

./: .gitattributes  .gitignore  Makefile  README.md  pyproject.toml
scripts/: check_environment.py  update_version.py
src/patentpack/: __init__.py  cli.py  client.py  config.py
src/patentpack/common/orgnorm/: __init__.py  constants.py  core.py  country.py  stem.py  variants.py
src/patentpack/core/: __init__.py  contracts.py  interfaces.py
src/patentpack/gleif/: __init__.py  http.py  match.py  parse.py  search.py
src/patentpack/idmap/: __init__.py  cache.py  discovery.py  iterator.py  providers.py  runner.py  types.py  utils.py  variants.py
src/patentpack/operations/: __init__.py  cpc_codebook.py  cpc_vectors.py
src/patentpack/providers/: __init__.py  epo.py  factory.py  uspto.py
tests/: conftest.py  test_config.py  test_epo_provider.py  test_gleif_http.py  test_gleif_match.py  test_gleif_parse.py  test_gleif_search_match.py  test_gleif_search_mock.py  test_idmap_cache.py  test_idmap_iterator.py  test_idmap_runner.py  test_idmap_types.py  test_idmap_variants.py  test_orgnorm_core.py  test_orgnorm_variants.py  test_uspto_provider.py
