[project]
name = "patentpack"
version = "0.2.0"
description = "Utility for patent fetching from APIs"
authors = [
    {name = "JPK85",email = "52880112+JPK85@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "packaging (>=25.0,<26.0)",
    "toml (>=0.10.2,<0.11.0)",
    "typer (>=0.16.1,<0.17.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "urllib3 (>=2.5.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
patentpack = "patentpack.cli:main"

[tool.isort]
profile = "black"

[tool.black]
linelength = 79

[tool.coverage.report]
omit = ["tests/*", "scripts/check_environment.py", "*/__init__.py"]
exclude_lines = [
    "continue",
    "if TYPE_CHECKING",
    "if typing.TYPE_CHECKING",
    "if __name__ == '__main__':",
    "return NotImplemented",
    "raise NotImplementedError",
    "print",
    "logger.",
]

[tool.pyright]
pythonVersion = "3.12"
extraPaths = [
    "/opt/homebrew/Caskroom/miniconda/base/envs/patentpack/lib/python3.12/site-packages"
]

[tool.poetry.group.dev.dependencies]
coverage = "^7.10.5"
pynvim = "^0.5.2"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
python-dotenv = "^1.1.1"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
responses = "^0.25.8"

[tool.pytest.ini_options]
markers = [
  "live: hits real external services (network)",
  "uspto: tests for the USPTO provider",
  "epo: tests for the EPO OPS provider",
  "gleif: tests for the GLEIF resolver"
]
